# Torii

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: getting-started.md
examples/: torii.config.yaml
tests/unit/: test_config.py  test_converter.py  test_workflow.py
torii/: __init__.py  cli.py
torii/api/: __init__.py  converter.py
torii/config/: __init__.py  models.py
torii/mcp/: __init__.py  aggregator.py  gateway.py
torii/workflow/: engine.py
